--- a/GetDesignSpaceFiles.sketchplugin/Contents/Resources/neogallery.css
+++ b/GetDesignSpaceFiles.sketchplugin/Contents/Resources/neogallery.css
@@ -16,6 +16,7 @@
 #title {
   font-size: 24px;
   margin: 25px 0px 10px 0px;
+  position: relative;
 }
 #subtitle {
   text-align: center;
@@ -29,16 +30,14 @@
 .card_holder {
   width: 300px;
   display: inline-table;
-cursor: pointer;
+  cursor: pointer;
 }
 .transition {
-transition: .3s cubic-bezier(.3, 0, 0, 1.3)
+  transition: .3s cubic-bezier(.3, 0, 0, 1.3)
 }
 .card {
   background-color: #fff;
   box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.3);
-  -webkit-box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.3);
-  -moz-box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.3);
   height: 300px;
   left: 0;
   margin: auto;
@@ -49,104 +48,94 @@ transition: .3s cubic-bezier(.3, 0, 0, 1.3)
   margin: 20px;
 }
 .card:hover {
-/*height: 450px;*/
-width: 300px;
+  width: 300px;
 }
 .card:hover .cta-container {
-display: inline;
-margin-top: 240px;
+  display: inline;
 }
 .card:hover .card_circle {
-background-size: cover;
-border-radius: 0;
-margin-top: -175px;
+  background-size: cover;
+  border-radius: 0;
+  margin-top: -175px;
 }
 .card:hover h2 {
-color: #fff;
-margin-top: 55px;
-padding: 5px;
+  color: #fff;
+  margin-top: 55px;
+  padding: 5px;
 }
 .card:hover h2 small {
-color: #fff
+  color: #fff
 }
 .card:hover p {
-margin-top: 190px;
-color: #fff;
+  margin-top: 190px;
+  color: #fff;
 }
 .card_circle {
-background: url() no-repeat center bottom;
-background-color: #ee6e73;
-background-size: cover;
-border-radius: 50%;
-height: 400px;
-margin-left: -75px;
-margin-top: -320px;
-position: absolute;
-width: 450px;
+  background: url() no-repeat center bottom;
+  background-color: #ee6e73;
+  background-size: cover;
+  border-radius: 50%;
+  height: 400px;
+  margin-left: -75px;
+  margin-top: -320px;
+  position: absolute;
+  width: 450px;
 }
 h2 {
-font-size: 24px;
-font-weight: 200;
-margin-top: 150px;
-position: absolute;
-text-align: center;
-width: 100%;
-z-index: 9999;
+  font-size: 24px;
+  font-weight: 200;
+  margin-top: 150px;
+  position: absolute;
+  text-align: center;
+  width: 100%;
+  z-index: 9999;
 }
 p {
-color: rgba(0, 0, 0, .6);
-font-size: 100%;
-font-weight: normal;
-margin-top: 200px;
-position: absolute;
-text-align: center;
-z-index: 9999;
-width: 100%;
+  color: rgba(0, 0, 0, .6);
+  font-size: 100%;
+  font-weight: normal;
+  margin-top: 200px;
+  position: absolute;
+  text-align: center;
+  z-index: 9999;
+  width: 100%;
 }
 .cta-container {
-display: none;
-margin-top: 320px;
-position: absolute;
-text-align: center;
-left: 0px;
-width: 100%;
-z-index: 9999;
+  display: none;
+  margin-top: 320px;
+  position: absolute;
+  text-align: center;
+  left: 0px;
+  width: 100%;
+  z-index: 9999;
 }
 .cta {
--moz-border-radius: 2px;
--moz-transition: 0.2s ease-out;
--ms-transition: 0.2s ease-out;
--o-transition: 0.2s ease-out;
--webkit-border-radius: 2px;
--webkit-transition: 0.2s ease-out;
-background-clip: padding-box;
-border: 2px solid #ee6e73;
-border-radius: 2px;
-color: #ee6e73;
-display: inline-block;
-font-size: 17px;
-font-weight: 400;
-height: 36px;
-letter-spacing: 0.5px;
-line-height: 36px;
-margin-bottom: 15px;
-padding: 0 2rem;
-text-decoration: none;
-text-transform: uppercase;
-transition: 0.2s ease-out;
+  background-clip: padding-box;
+  border: 2px solid #ee6e73;
+  border-radius: 2px;
+  color: #ee6e73;
+  display: inline-block;
+  font-size: 17px;
+  font-weight: 400;
+  height: 36px;
+  letter-spacing: 0.5px;
+  line-height: 36px;
+  margin-bottom: 15px;
+  padding: 0 2rem;
+  text-decoration: none;
+  text-transform: uppercase;
+  transition: 0.2s ease-out;
 }
 .cta:hover {
-background-color: #ee6e73;
-box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-color: #fff;
--moz-box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
--webkit-box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  background-color: #ee6e73;
+  box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  color: #fff;
 }
 code {
   color: #ee6e73;
 }
 #neogallery img {
-width: 420px;
+  width: 420px;
   margin: 10px;
   border: 1px solid #757575;
 }
@@ -190,10 +179,20 @@ width: 100%;
   z-index: 30;
 }
 body {
-  background: linear-gradient(#000B2A, #163870);
+  background-color: #163870;
   background-repeat: no-repeat;
   margin: 0;
   padding: 0;
+}
+body:before {
+  content: "";
+  position:absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: inline-block;
+  background: linear-gradient(to bottom,  #000b2c 0%,#163870 100%);
 }
 .control {
   display: none;
@@ -241,6 +240,7 @@ body {
 }
 #tabs {
     text-align: center;
+    position: relative;
 }
 #tabs li {
   list-style: none;
